--- a/src/SVRGN.Libs.Contracts.Service.Configuration/SVRGN.Libs.Contracts.Service.Configuration.csproj
+++ b/src/SVRGN.Libs.Contracts.Service.Configuration/SVRGN.Libs.Contracts.Service.Configuration.csproj
@@ -21,8 +21,8 @@
 		</None>
 	</ItemGroup>
 
-  <ItemGroup>
-    <ProjectReference Include="..\SVRGN.Libs.Contracts.Service.Base\SVRGN.Libs.Contracts.Service.Base.csproj" />
-  </ItemGroup>
+	<ItemGroup>
+	  <PackageReference Include="SVRGN.Libs.Contracts.Service.Base" Version="1.0.0-alpha19" />
+	</ItemGroup>
 
 </Project>
