--- a/src/SVRGN.Libs.Contracts.Service.Configuration/SVRGN.Libs.Contracts.Service.Configuration.csproj
+++ b/src/SVRGN.Libs.Contracts.Service.Configuration/SVRGN.Libs.Contracts.Service.Configuration.csproj
@@ -4,7 +4,7 @@
 		<TargetFramework>netstandard2.0</TargetFramework>
 		<GeneratePackageOnBuild>True</GeneratePackageOnBuild>
 		<LangVersion>latest</LangVersion>
-		<Version>1.0.0-alpha19</Version>
+		<Version>1.0.0-beta01</Version>
 		<Authors>SVRGN.eu</Authors>
 		<Copyright>2023 SVRGN.eu</Copyright>
 		<Description>Interface for configuration reading and writing services used by SVRGN service implementations.</Description>
